[gd_scene load_steps=7 format=2]

[ext_resource path="res://Juego/HUD/VidasHUDtscn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/HUD/LlavesHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/HUD/MonedasPlataHUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/HUD/MonedasOroHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/HUD/MonedasBronceHUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/HUD/HUD.gd" type="Script" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 59.0, 183.0 ],
"_edit_use_anchors_": false
}

[node name="Llaves" parent="." instance=ExtResource( 2 )]
margin_left = 53.0
margin_top = 137.0
margin_right = 192.0
margin_bottom = 184.0

[node name="Vidas" parent="." instance=ExtResource( 1 )]
margin_left = 52.0
margin_top = 59.0
margin_right = 191.0
margin_bottom = 106.0

[node name="MonedasPlataHUD" parent="." instance=ExtResource( 3 )]
margin_left = 1097.0
margin_top = 90.0
margin_right = 1246.0
margin_bottom = 117.0

[node name="MonedasBronceHUD" parent="." instance=ExtResource( 5 )]
margin_left = 1098.0
margin_top = 138.0
margin_right = 1247.0
margin_bottom = 165.0

[node name="MonedasOroHUD" parent="." instance=ExtResource( 4 )]
margin_left = 1098.0
margin_top = 42.0
margin_right = 1247.0
margin_bottom = 69.0
